--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular2Auth0DailydealsTutorial</title>
+  <title>Daily Deals</title>
   <base href="/">
+  <script src="//cdn.auth0.com/js/lock/10.2.2/lock.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
